[package]
name = "zend-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
gloo-timers = { version = "0.2.6", features = ["futures"] }
leptos = "0.2.5"
leptos_router = { version = "0.2.5", features = ["csr"] }
serde = "1.0.162"
serde_json = "1.0.96"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
ws_stream_wasm = "0.7.4"
zend-common = { version = "0.1.0", path = "../common/zend-common" }
