[package]
name = "zend-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0"
wasm-bindgen = "0"
zend-common = { path = "../common/zend-common" }


[dependencies.web-sys]
version = "0.3.61"
features = ["Window", "Document", "Element", "HtmlDocument", "HtmlElement", "MessageEvent", "WebSocket", "BinaryType", "Blob", "ProgressEvent", "FileReader", "ErrorEvent"]
