[package]
name = "zend-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0"
wasm-bindgen = "0"
zend-common = { path = "../common/zend-common" }
ws_stream_wasm = "0.7.4"
wasm-bindgen-futures = "0.4.34"
futures = "0.3.28"
pharos = "0.5.3"
gloo-timers = { version = "0.2.6", features = ["futures"] }
serde_json = "1.0.96"
serde = "1.0.160"


[dependencies.web-sys]
version = "0.3.61"
features = ["Window", "Document", "Element", "HtmlDocument", "HtmlElement", "MessageEvent", "WebSocket", "BinaryType", "Blob", "ProgressEvent", "FileReader", "ErrorEvent", "Performance"]
