[package]
name = "zend-worker"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
base64 = "0.21.0"
zend-common = { path = "../common/zend-common" }
futures = "0.3.28"
getrandom = { version = "0.2.9", features = ["js"] }  # need to enable wasm feature flag in dependency tree (p256->randcore->getrandom)
hex = "0.4.3"
p256 = { version = "0.13.2", features = ["ecdsa", "sha256"] }
serde = "1.0.160"
serde_json = "1.0.96"
worker = "0.0.16"

[profile.release]
lto = true
strip = true
codegen-units = 1
