[package]
name = "zend-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0"
enum-convert = { path = "../enum-convert" }
futures = "0"
getrandom = { version = "0", features = ["js"] }  # need to enable wasm feature flag in dependency tree (p256->randcore->getrandom)
hex = "0"
p256 = { version = "0", features = ["ecdsa", "hex-literal", "sha256"] }
serde = { version = "1", features = ["derive"] } 
serde_json = "1"
